--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "echo 'Skipping lint...'" 
+    "lint": "next lint"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.19",
